<resources>
    <string name="app_name">MoviesApp</string>

    <!-- Menu of main toolbar -->
    <string name="home">Home</string>
    <string name="movies">Movies</string>
    <string name="shows">Shows</string>
    <string name="user">User</string>

    <string name="upcoming">Upcoming</string>
    <string name="nowPlaying">Now Playing</string>
    <string name="onTheAir">On The Air</string>
    <string name="air2day">Airing Today</string>

    <string name="poster">Poster</string>

    <!-- REGISTER COLUMNS -->
    <string name="already_member_login">Already a member? Login</string>
    <string name="create_account">Create Account</string>
    <string name="reenter_pswd">Re-enter Password</string>
    <string name="welcome">Welcome to Movies App!</string>
    <string name="logo">Movies Logo</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="no_account_register">No account yet? Create one</string>

    <string name="about">About</string>
    <string name="details">Details</string>
    <string name="profile">Profile</string>
    <string name="logout">Log Out</string>
    <string name="name">Name</string>
    <string name="title">Title</string>

    <!-- Strings related to login -->
    <string name="signin">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_credentials">Username or password are incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <!-- PROFILE COLUMNS -->
    <string name="profile_edit">Edit Profile</string>
    <string name="profile_welcome">Welcome</string>
    <string name="profile_delete_photo">Delete Profile Photo</string>
    <string name="profile_upload_photo">Upload Profile Photo</string>
    <string name="profile_first_name">First Name</string>
    <string name="profile_last_name">Last Name</string>
    <string name="profile_email">Email</string>
    <string name="profile_age">Age</string>
    <string name="profile_date_of_birth">Birth Date</string>
    <string name="profile_save_changes">Save changes</string>
    <string name="user_image">Profile Image</string>
    <string name="title_activity_login2">Sign in</string>
    <string name="error_incorrect_password">This password is incorrect</string>


</resources>
